--- a/media.css
+++ b/media.css
@@ -48,7 +48,14 @@
     flex-basis: 25%;
   }
   
-
+  .product_section{
+    padding: 15px 10px;
+  }
+  
+  .product_items{
+    flex-basis: 49%;
+    margin-bottom: 10px;
+  }
  }
 
 @media only screen and (min-width: 576px) and (max-width: 1280px){
