--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0px;
   font-family: sans-serif;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 nav{
@@ -204,4 +205,137 @@ nav{
   padding: 5px 15px;
   border: 1px solid #328830;
   border-radius: 7px;
+}
+
+.footer_1{
+  max-width: 1280px;
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
+  padding: 0px;
+}
+
+.part-1 img{
+  width: 100%;
+}
+
+.part-2{
+  max-width: 1280px;
+  background-color: #e6f2ff;
+  display: flex;
+  margin: 0px;
+}
+
+.part-2-items{
+  flex-basis: 23%;
+  font-size: 9px;
+  text-align: center;
+  margin: 0% 1%;
+  padding: 5px 0px 15px 0px;
+}
+
+.part-2-items img{
+  width: 100%;
+  height: 75%;
+  border-radius: 5px;
+}
+
+.footer_2{
+  max-width: 1280px;
+  border: 1px solid #ddd;
+  margin-top: 15px;
+}
+
+.footer_2 img{
+  width: 100%;
+}
+
+.footer_3{
+  max-width: 1280px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 12px;
+}
+
+.Description{
+  font-size: 16px;
+  font-weight: 500;
+  color: #BDBDBD;
+}
+.plus-sign{
+  font-size: 24px;
+  color: #BDBDBD;
+}
+
+ footer{
+  padding: 40px 0px 0px 15px;
+}
+
+.footer_web{
+  max-width: 1280px;
+  margin: auto;
+}
+
+.footer_web_row1{
+  display: flex;
+  gap: 40px;
+}
+
+.footer_web_row1_left{
+  flex-basis: 30%;
+}
+
+.footer_web_row1_left h3{
+  margin-bottom: 15px;
+}
+
+.useful_links{
+  display: flex;
+}
+
+.useful_links ul{
+  flex-basis: 33%;
+  list-style: none;
+}
+
+.useful_links ul li a{
+  font-size: 14px;
+  display: block;
+  color: rgb(102, 102, 102);
+  margin-bottom: 10px;
+}
+
+.footer_web_row1_right{
+  flex-basis: 70%;
+}
+
+.categoriesheading{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.categories_links{
+  display: flex;
+  margin-top: 40px;
+}
+
+.categories_links ul{
+  flex-basis: 30%;
+  list-style: none;
+}
+
+.categories_links ul li a{
+  font-size: 14px;
+  display: block;
+  color: rgb(102, 102, 102);
+  margin-bottom: 10px;
+}
+
+.footer_web_row3 p{
+  padding: 20px 0px;
+  color: rgb(102, 102, 102);
+  font-size: 14px;
+  line-height: 20px;
 }
