--- a/media.css
+++ b/media.css
@@ -58,11 +58,7 @@
  }
 
 @media only screen and (min-width: 576px) and (max-width: 1280px){
-  .nav_left button{
+  .nav_left button,.banner img:last-child,.footer_phn{
     display: none;
-  }
-
-.banner img:last-child,.footer_phn{
-  display: none;
   }
  }
